--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
-<title>PixelAutomatonLogicCircuit</title>
+<title>Pixel Automaton Logic Circuit</title>
 <script src="index.js" type="module"></script>
